# momentic_dev

./: .gitignore  README.md  pyproject.toml
actions/: build_indicators.py  fetch_history_massive.py  open_connection_massive.py  run_signal_engine.py
actions/state/: connections.json
docs/: ARCHITECTURE.md
src/: main.py
src/analytics/: calculate_indicators.py  risk_metrics.py
src/config/: secrets.py
src/data/: fetch_history.py  fetch_history_massive.py  io.py
src/orchestration/: signal_engine.py
src/utils/: math.py
src/venues/: massive.py
state/: connections.json
